Coreção links das imagens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="header">
-    <img src="images/Marca.svg" alt="Logo Emmanuel OLiveira" width="375" height="38">
+    <img src="img/Marca.svg" alt="Logo Emmanuel OLiveira" width="375" height="38">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -24,7 +24,7 @@
     </nav>
   </header>
   <main class="introducao">
-    <img src="images/Perfil.png" alt="Minha Imagem de Perfil" width="475" height="598">
+    <img src="img/perfil.png" alt="Minha Imagem de Perfil" width="475" height="598">
     <div>
       <h1>Desenvolvedor<br> Full Stack & <br>UX-UI Designer</h1>
       <p>Em formaçao</p>
