atualização do favicon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portifólio - Emmanuel Oliveira</title>
   <meta name="description" content="Desenvolvedor Front-End UX/UI Designer localizado em São Paulo">
-  <link rel="shortcut icon" href="Favicom.svg" type="image/x-icon">
+  <link rel="icon" href="Favicom.svg" type="image/svg+xml">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
