--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <title>Portifólio - Emmanuel Oliveira</title>
   <meta name="description" content="Desenvolvedor Front-End UX/UI Designer localizado em São Paulo">
   <link rel="icon" href="Favicom.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
