:sparkles: feat:Animação

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="description" content="Desenvolvedor Front-End UX/UI Designer localizado em São Paulo">
   <link rel="icon" href="Favicom.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -27,18 +27,20 @@
     </nav>
   </header>
   <main class="introducao">
-    <img src="img/perfil.png" alt="Minha Imagem de Perfil" width="475" height="598">
+    <img class="animate" src="img/Foto Perfil-2.png" alt="Minha Imagem de Perfil" width="475" height="598">
     <div>
-      <h1>Desenvolvedor<br> Full Stack & <br>UX-UI Designer</h1>
-      <p>Em formaçao</p>
-      <p>Localizado em São Paulo🏙️</p>
+      <h1 id="titulo">Desenvolvedor Full Stack / UX-UI Designer</h1>
+      <!-- <h1 id="titulo">Full Stack & UX-UI Designer</h1> -->
+
+      <p class="animate from-top">Localizado em São Paulo</p>
     </div>
   </main>
   <section class="experiencia" id="experiencia" aria-label="Experiência">
-    <h2 class="subtitulo">Experiência</h2>
+    <h2 class="animate from-right  subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Olá tenho<strong> 43 anos</strong>, sou apaixonado por<strong> tecnologia</strong> e amante da Natureza. Profissional em <strong>transição de carreira.</strong>Atualmente fazendo o curso de<strong> Full Stack Python</strong> pela EBAC. Em busca de uma <strong>Oportunidade</strong> como <strong>Desenvolvedor Front-end Junior</strong>. </p>
-      <div class="empresa">
+      <p class=" animate  experiencia-texto">Olá tenho<strong> 43 anos</strong>, sou apaixonado por<strong> tecnologia</strong> e amante da Natureza. Profissional em <strong>transição de carreira.</strong>Atualmente fazendo o curso de<strong> Full Stack Python</strong> pela EBAC. Em busca de uma <strong>Oportunidade</strong> como <strong>Desenvolvedor Front-end Junior</strong>. </p>
+
+      <div class=" animate from-right empresa">
         <span class="empresa-ano">2015-2022</span>
         <h3 class="empresa-titulo"> Arcos Dourados - Mc Donald´s </h3>
         <span class="empresa-titulo-cargo">Gerente de Négocios</span>
@@ -54,7 +56,7 @@
         </ul>
       </div>
 
-      <div class="empresa">
+      <div class=" animate from-right empresa">
         <span class="empresa-ano">2012-2014</span>
         <h3 class="empresa-titulo"> Arcos Dourados - Mc Donad´s</h3>
         <span class="empresa-titulo-cargo">Gerente Assitente</span>
@@ -70,7 +72,7 @@
         </ul>
       </div>
 
-      <div class="empresa">
+      <div class=" animate from-right empresa">
         <span class="empresa-ano">2007-2012</span>
         <h3 class="empresa-titulo"> Arcos Dourados - Mc Donad´s</h3>
         <span class="empresa-titulo-cargo">Gerente de turno</span>
@@ -88,14 +90,14 @@
     </div>
   </section>
 
-  <section class="formacao" id="formacao" aria-label="Formação">
+  <section class="formacao" aria-label="Formação">
     <div class="formacao-container">
-      <h2 class="subtitulo">Formação</h2>
+      <h2 class="animate from-right  subtitulo">Formação</h2>
       <div>
-        <p class="formacao-texto">
+        <p id="formacao" class=" animate from-right formacao-texto">
           Minha recente formação foi um <strong>Tecnologo </strong>em <strong>Redes de Computadores</strong> de Faculdade <strong>UniSantanna </strong>onde me formei em julho de 2023. Atualmente estou voltado para a área Desenvolvimento Web Full Stack me especializando. Atráves da Escola <strong> EBAC</strong> e outras plataformas on-line.
         </p>
-        <ul class="faculdade-lista">
+        <ul class=" animate faculdade-lista">
           <li class="faculdade">
             <span class="faculdade-tipo">Tecnologo</span>
             <h3 class="faculdade-curso">Redes de Computadores</h3>
@@ -104,31 +106,31 @@
 
         </ul>
 
-        <div class="formacao-extra">
+        <div class="animate formacao-extra">
           <div class="cursos">
             <h3>Cursos Intensivos</h3>
             <ul>
               <li>
-                <a href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 1 de 5 <span>Estudonauta-40h</span></a>
+                <a class="animate" href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 1 de 5 <span>Estudonauta-40h</span></a>
               </li>
               <li>
-                <a href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 2 de 5 <span>Estudonauta-40h</span></a>
+                <a class="animate" href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 2 de 5 <span>Estudonauta-40h</span></a>
               </li>
               <li>
-                <a href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 3 de 5 <span>Estudonauta-40h</span></a>
+                <a class="animate" href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 3 de 5 <span>Estudonauta-40h</span></a>
               </li>
               <li>
-                <a href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 4 de 5 <span>Estudonauta-40h</span> </a>
+                <a class="animate" href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Desenvolvimento Web-Módulo 4 de 5 <span>Estudonauta-40h</span> </a>
               </li>
               <li>
-                <a href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Linguagem JavaScript<span>Estudonauta-40h</span> </a>
+                <a class="animate" href="https://www.estudonauta.com/aluno/emmanuel-oliveira" target="_blank">Linguagem JavaScript<span>Estudonauta-40h</span> </a>
               </li>
 
               <li>
-                <a href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/77218/a245878ec4978b9cd9af9f2e25d0b8b1/certificado.png " target="_blank">UX - User Experience<span>FIAP-40h</span></a>
+                <a class="animate" href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/77218/a245878ec4978b9cd9af9f2e25d0b8b1/certificado.png " target="_blank">UX - User Experience<span>FIAP-40h</span></a>
               </li>
               <li>
-                <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-fd830d42-afbd-4609-94d3-51e1d4f82b46.jpg" target="_blank">Git e GitHub do Zero ao Avançado<span>Udemy-6h</span></a>
+                <a class="animate" href="https://udemy-certificate.s3.amazonaws.com/image/UC-fd830d42-afbd-4609-94d3-51e1d4f82b46.jpg" target="_blank">Git e GitHub do Zero ao Avançado<span>Udemy-6h</span></a>
               </li>
 
 
@@ -136,8 +138,8 @@
           </div>
 
           <div class="idiomas">
-            <h3>Idiomas</h3>
-            <ul>
+            <h3 class="animate">Idiomas</h3>
+            <ul class="animate">
               <li>Inglês<span>/ Beginner</span></li>
             </ul>
           </div>
@@ -150,17 +152,18 @@
 
   <footer class="footer" id="contato">
     <div class="footer-container">
-      <p class="footer-texto"> Estou disponivel para novo projetos no momento. Entre em contato comigo para marcarmos uma conversa.🖖</p>
+      <p class=" animate from-left footer-texto"> Estou disponivel para novo projetos no momento. Entre em contato comigo para marcarmos uma conversa.🖖</p>
 
-      <ul class="footer-contato">
+      <ul class=" animate from-right footer-contato">
         <li>emmanuelmarcosdeoliveira@gmail.com</li>
         <li>+55(11)96833-6094</li>
 
       </ul>
-      <p class="footer-copy"> 2023 - &copy;Alguns direitos reservados.</p>
+      <p class="animate from-left footer-copy"> 2023 - &copy;Alguns direitos reservados.</p>
     </div>
   </footer>
   <script src="js/script.js"></script>
+  <script src="js/intersection.js"></script>
 </body>
 
 </html>
