--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
 <body>
   <header class="header">
-    <img src="img/Marca.svg" alt="Logo Emmanuel OLiveira" width="375" height="38">
+    <img src="img/marca2.jpg" alt="Logo Emmanuel OLiveira" width="375" height="38">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
         <li><a href="#formacao">Formação</a></li>
+        <li><a href="#Portifólio">Portifólio</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
@@ -29,18 +30,18 @@
   <main class="introducao">
     <img class="animate" src="img/Foto Perfil-2.png" alt="Minha Imagem de Perfil" width="475" height="598">
     <div>
-      <h1 id="titulo">Desenvolvedor Full Stack / UX-UI Designer</h1>
-      <!-- <h1 id="titulo">Full Stack & UX-UI Designer</h1> -->
+      <h1 id="titulo"> Desenvolvedor Front-End/UX-UI Designer</h1>
 
       <p class="animate from-top">Localizado em São Paulo</p>
+      <a class="introducao-botao animate from-left" href="./"><button type="button">Currículo</button></a>
     </div>
   </main>
   <section class="experiencia" id="experiencia" aria-label="Experiência">
-    <h2 class="animate from-right  subtitulo">Experiência</h2>
+    <h2 class="animate subtitulo">Experiência</h2>
     <div>
-      <p class=" animate  experiencia-texto">Olá tenho<strong> 43 anos</strong>, sou apaixonado por<strong> tecnologia</strong> e amante da Natureza. Profissional em <strong>transição de carreira.</strong>Atualmente fazendo o curso de<strong> Full Stack Python</strong> pela EBAC. Em busca de uma <strong>Oportunidade</strong> como <strong>Desenvolvedor Front-end Junior</strong>. </p>
+      <p class=" animate from-right experiencia-texto">Olá tenho<strong> 43 anos</strong>, sou apaixonado por<strong> tecnologia</strong> e amante da Natureza. Profissional em <strong>transição de carreira.</strong>Atualmente fazendo o curso de<strong> Full Stack Python</strong> pela EBAC. Em busca de uma <strong>Oportunidade</strong> como <strong>Desenvolvedor Front-end Junior</strong>. </p>
 
-      <div class=" animate from-right empresa">
+      <div class=" animate from-left empresa">
         <span class="empresa-ano">2015-2022</span>
         <h3 class="empresa-titulo"> Arcos Dourados - Mc Donald´s </h3>
         <span class="empresa-titulo-cargo">Gerente de Négocios</span>
@@ -72,7 +73,7 @@
         </ul>
       </div>
 
-      <div class=" animate from-right empresa">
+      <div class=" animate from-left empresa">
         <span class="empresa-ano">2007-2012</span>
         <h3 class="empresa-titulo"> Arcos Dourados - Mc Donad´s</h3>
         <span class="empresa-titulo-cargo">Gerente de turno</span>
@@ -90,11 +91,11 @@
     </div>
   </section>
 
-  <section class="formacao" aria-label="Formação">
+  <section class="formacao" id="formacao" aria-label="Formação">
     <div class="formacao-container">
       <h2 class="animate from-right  subtitulo">Formação</h2>
       <div>
-        <p id="formacao" class=" animate from-right formacao-texto">
+        <p class=" animate from-right formacao-texto">
           Minha recente formação foi um <strong>Tecnologo </strong>em <strong>Redes de Computadores</strong> de Faculdade <strong>UniSantanna </strong>onde me formei em julho de 2023. Atualmente estou voltado para a área Desenvolvimento Web Full Stack me especializando. Atráves da Escola <strong> EBAC</strong> e outras plataformas on-line.
         </p>
         <ul class=" animate faculdade-lista">
@@ -156,14 +157,28 @@
 
       <ul class=" animate from-right footer-contato">
         <li>emmanuelmarcosdeoliveira@gmail.com</li>
-        <li>+55(11)96833-6094</li>
+
+
+        <div class="redes">
+          <a href="./"><img src="img/whatsapp-svgrepo-com (1).svg" alt=""></a>
+          <a href="./"><img src="img/insta.svg" alt=""></a>
+          <a href="./"><img src="img/linkd.svg" alt=""> </a>
+
+
+        </div>
+
+
+
+
 
       </ul>
       <p class="animate from-left footer-copy"> 2023 - &copy;Alguns direitos reservados.</p>
     </div>
-  </footer>
-  <script src="js/script.js"></script>
-  <script src="js/intersection.js"></script>
+
+
+
+    <script src="js/script.js"></script>
+    <script src="js/intersection.js"></script>
 </body>
 
 </html>
