:dizzy: correção da animação dos cargos

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 <body>
   <header class="header">
-    <img src="img/marca2.jpg" alt="Logo Emmanuel OLiveira" width="375" height="38">
+    <img src="img/logo-marca.jpg" alt="Logo Emmanuel OLiveira" width="375" height="38">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
         <li><a href="#formacao">Formação</a></li>
-        <li><a href="#Portifólio">Portifólio</a></li>
+        <!-- <li><a href="#Portifólio">Portifólio</a></li> -->
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
@@ -141,7 +141,7 @@
             </ul> -->
             <ul class=" animate faculdade-lista">
 
-              <a href="https://www.estudonauta.com/certificates/certificado-40h/?course_id=46183&cert-nonce=19303323a4" target="_blank">
+              <a href="assets/certificados curso em video/estudonauta-modulo-1.png" target="_blank">
                 <li class=" animate faculdade">
                   <span class="faculdade-tipo">HTML5&CSS3</span>
                   <h3 class="faculdade-curso">Modulo 1</h3>
@@ -149,7 +149,7 @@
                   <h5>Carga Hóraria: 40h</h5>
                 </li>
               </a>
-              <a href="https://www.estudonauta.com/certificates/certificado-40h/?course_id=59769&cert-nonce=bdc1b65b20" target="_blank">
+              <a href="assets/certificados curso em video/estudonauta-modulo-2.png" target="_blank">
                 <li class="animate faculdade">
                   <span class="faculdade-tipo">HTML5&CSS3</span>
                   <h3 class="faculdade-curso">Modulo 2</h3>
@@ -157,7 +157,7 @@
                   <h5>Carga Hóraria: 40h </h5>
                 </li>
               </a>
-              <a href="https://www.estudonauta.com/certificates/certificado-40h/?course_id=59820&cert-nonce=bdd0e5621c" target="_blank">
+              <a href="assets/certificados curso em video/estudonauta-modulo-3.png" target="_blank">
                 <li class="animate faculdade">
                   <span class="faculdade-tipo">HTML5&CSS3</span>
                   <h3 class="faculdade-curso">Modulo 3</h3>
@@ -165,7 +165,7 @@
                   <h5>Carga Hóraria: 40h </h5>
                 </li>
               </a>
-              <a href="https://www.estudonauta.com/certificates/certificado-40h/?course_id=94097&cert-nonce=3b599c769d" target="_blank">
+              <a href="assets/certificados curso em video/estudonauta-modulo-4.png" target="_blank">
                 <li class="animate faculdade">
                   <span class="faculdade-tipo">HTML5&CSS3</span>
                   <h3 class="faculdade-curso">Modulo 4</h3>
@@ -173,7 +173,7 @@
                   <h5>Carga Hóraria: 40h </h5>
                 </li>
               </a>
-              <a href="https://www.estudonauta.com/certificates/certificado-40h/?course_id=46447&cert-nonce=ac0cada459" target="_blank">
+              <a href="assets/certificados curso em video/estudonauta-javascript.png" target="_blank">
                 <li class="animate faculdade">
                   <span class="faculdade-tipo">JavaScript</span>
                   <h3 class="faculdade-curso">Linguagem JavaScript</h3>
@@ -199,7 +199,7 @@
                 </li>
               </a>
 
-              <a href="https://www.origamid.com/certificate/32fe5f6e" target="_blank">
+              <a href="assets/certificados origamid/UI-origamid.png" target="_blank">
                 <li class="animate faculdade">
                   <span class="faculdade-tipo">UI</span>
                   <h3 class="faculdade-curso">User Interface</h3>
@@ -233,8 +233,8 @@
 
 
         <div class="redes">
-          <a href="https://www.linkedin.com/in/-emmanuel-oliveira" target="_blank" rel="external"><img src="img/linkd.svg" alt="Perfin no Lnkedim"></a>
-          <a href="https://wa.me/5511968336094" target="_blank"><img src="img/whatsapp-svgrepo-com (1).svg" alt="Telefone para contato whathsapp"></a>
+          <a href="https://www.linkedin.com/in/-emmanuel-oliveira" target="_blank" rel="external"><img src="img/icon-linkedin.svg" alt="Perfin no Lnkedim"></a>
+          <a href="https://wa.me/5511968336094" target="_blank"><img src="img/icon-whatsapp.svg" alt="Telefone para contato whathsapp"></a>
           <!-- <a href="https://instagram.com/desenvolvedor.oliveira?igshid=MzNlNGNkZWQ4Mg==" target="_blank" rel="external"><img src="img/insta.svg" alt="Meu Perfin no insta"></a> -->
         </div>
 
