--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div>
       <p class=" animate from-right experiencia-texto">Olá tenho<strong> 44 anos</strong>,sou apaixonado por <strong>tecnologia</strong> e amante da Natureza. Profissional em <strong>transição de carreira.</strong> Atualmente fazendo o curso de<strong> Full Stack Python</strong> pela EBAC. Em processo de desenvolvimento buscando uma <strong>Oportunidade </strong>como <strong>Desenvolvedor Front-end Junior</strong>. </p>
 
-      <div class=" animate from-left empresa">
+      <div class=" animate from-right empresa">
         <span class="empresa-ano">2015-2022</span>
         <h3 class="empresa-titulo"> Arcos Dourados - Mc Donald´s </h3>
         <span class="empresa-titulo-cargo">Gerente de Négocios</span>
