:dizzy: mudanças nas animações

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </main>
 
   <section class="experiencia" id="experiencia" aria-label="Experiência">
-    <h2 class="animate subtitulo">Experiência</h2>
+    <h2 class="animate from-left subtitulo">Experiência</h2>
     <div>
       <p class=" animate from-right experiencia-texto">Olá tenho<strong> 44 anos</strong>,sou apaixonado por <strong>tecnologia</strong> e amante da Natureza. Profissional em <strong>transição de carreira.</strong> Atualmente fazendo o curso de<strong> Full Stack Python</strong> pela EBAC. Em processo de desenvolvimento buscando uma <strong>Oportunidade </strong>como <strong>Desenvolvedor Front-end Junior</strong>. </p>
 
@@ -75,7 +75,7 @@
         </ul>
       </div>
 
-      <div class=" animate from-left empresa">
+      <div class=" animate from-right empresa">
         <span class="empresa-ano">2007-2012</span>
         <h3 class="empresa-titulo"> Arcos Dourados - Mc Donad´s</h3>
         <span class="empresa-titulo-cargo">Gerente de turno</span>
@@ -95,7 +95,7 @@
 
   <section class="formacao" id="formacao" aria-label="Formação">
     <div class="formacao-container">
-      <h2 class="animate from-right  subtitulo">Formação</h2>
+      <h2 class="animate from-left  subtitulo">Formação</h2>
       <div>
         <p class=" animate from-right formacao-texto">
           Minha recente formação foi um <strong>Tecnologo </strong>em <strong>Redes de Computadores</strong> na Faculdade <strong>UniSantanna </strong>onde me formei em julho de 2023. Atualmente estou voltado para a área Desenvolvimento Web Full Stack me desenvolvendo e especializando atráves da Escola <strong> EBAC</strong> e outras plataformas on-line.
