:ok_hand: inclusão picture

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   </header>
 
   <main class="introducao">
-    <img class="animate" src="img/Foto Perfil-2.png" alt="Minha Imagem de Perfil" width="475" height="598">
+    <picture>
+      <source media="(max-width: 500px)" srcset="img/foto-perfil-mobile.png" type="image/png">
+      <img class="animate" src="img/Foto-perfil.png" alt="Minha Imagem de Perfil" width="475" height="598">
+    </picture>
     <div>
       <h1 id="titulo"> Desenvolvedor Front-End/UX-UI Designer</h1>
 
