:construction: Site em contrução

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <h1 id="titulo"> Desenvolvedor Front-End/UX-UI Designer</h1>
 
       <p class="animate from-right">Localizado em São Paulo</p>
-      <a class="introducao-botao animate from-left" href="assets/curriculum/CV-Emmanuel_Oliveira.pdf" download="CV-Emmanuel_Oliveira" type="application/pdf"><button type="button">Currículo</button> </a>
+      <a class="introducao-botao animate from-left" href="assets/curriculum/CV-Emmanuel_Oliveira.pdf" download="CV-Emmanuel_Oliveira" type="application/pdf"><button type="button">Currículo
+      </button> </a>
 
     </div>
   </main>
