:construction: botão topo

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
   <main class="introducao">
     <picture>
-      <source media="(max-width: 500px)" srcset="img/foto-perfil-mobile.png" type="image/png">
-      <img class="animate" src="img/Foto-perfil.png" alt="Minha Imagem de Perfil" width="475" height="598">
+      <source media="(max-width: 500px)" srcset="img/foto-perfil/foto-perfil-mobile.png" type="image/png">
+      <img class="animate" src="img/foto-perfil/foto-perfil.png" alt="Minha Imagem de Perfil" width="475" height="598">
     </picture>
     <div>
       <h1 id="titulo"> Desenvolvedor Front-End/UX-UI Designer</h1>
 
       <p class="animate from-right">Localizado em São Paulo</p>
-      <a class="introducao-botao animate from-left" href="assets/curriculum/CV-Emmanuel_Oliveira.pdf" download="CV-Emmanuel_Oliveira" type="application/pdf"><button type="button">Currículo
-      </button> </a>
+      <a class="introducao-botao animate from-left" href="assets/curriculum/Curricum - Front-End Black.pdf" download="CV-Emmanuel_Oliveira" type="application/pdf"><button type="button">Currículo
+        </button> </a>
 
     </div>
   </main>
@@ -116,7 +116,7 @@
 
         <div class="animate formacao-extra">
           <div class="cursos">
-            <h2>Cursos Intensivos</h2>
+            <h3>Cursos Intensivos</h3>
 
             <ul class=" animate faculdade-lista">
 
@@ -191,7 +191,7 @@
           </div>
 
           <div class="idiomas">
-            <h2 class="animate">Idiomas</h2>
+            <h3 class="animate ">Idiomas</h3>
             <ul class="animate">
               <li>Inglês<span>/Beginner</span></li>
             </ul>
@@ -213,7 +213,9 @@
           <a href="https://wa.me/5511968336094" target="_blank"><img src="img/redes-sociais/icon-whatsapp.svg" alt="Telefone para contato whathsapp"></a>
           <!-- <a href="https://instagram.com/desenvolvedor.oliveira?igshid=MzNlNGNkZWQ4Mg==" target="_blank" rel="external"><img src="img/insta.svg" alt="Meu Perfin no insta"></a> -->
         </div>
-
+        <div id="btn-top">
+          <a href=""><img src="img/icones/top.svg" alt=""></a>
+        </div>
 
 
 
